examples/test/testpolicy9277.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9277
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key32: value42
      key18: value24
      key5: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value3
          key42: value46
      podSelector:
        matchLabels:
          key38: value11
